Update and rename SY-ADS.html to index.html

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 			<div class="top-header-container">
 				<div class="left-side">
 					<div class="logo">
-						<a href="SY-ADS.html"><p>Logo</p></a>
+						<a href="index.html"><p>Logo</p></a>
 					</div>
 					<span id="dark-mode">dark mode</span>
 				</div>
 				<nav class="nav-bar">
 					<ul class="menu">
-					    <li><a href="SY-ADS.html"><i class=""></i> الرئيسية</a></li>
+					    <li><a href="index.html"><i class=""></i> الرئيسية</a></li>
 						<li><a href="#"><i class="fas fa-car"></i> المركبات </a></li>
 						<li><a href="#"><i class="fas fa-home"></i> العقارات </a></li>
 						<li><a href="#"><i class="fas fa-users"></i> المجتمع</a></li>
