--- a/Log-in.html
+++ b/Log-in.html
@@ -139,7 +139,7 @@
 					</div>
 					<div class="sponsor">
 						<h2>شكراً للدعم</h2>
-						<a href="#"><img src="logo.png"></a>
+						<a href="#"><img src="images/logo.png"></a>
 					</div>
 				</div>
 			</footer>
