--- a/Sign-up.html
+++ b/Sign-up.html
@@ -57,7 +57,7 @@
 			</div>
 		</header>
 
-		<main style="background-image: url('bb.jpg');">
+		<main style="background-image: url('images/bb.jpg');">
 			<div class="main-container">
 				<h1 class="signing-title">إنشاء حساب</h1>
 				<p class="sign-description">خدمة إنشاء الحساب <span>مجانية</span> و <span>لا تأخذ وقت</span>!</p>
@@ -144,7 +144,7 @@
 					</div>
 					<div class="sponsor">
 						<h2>شكراً للدعم</h2>
-						<a href="#"><img src="logo.png"></a>
+						<a href="#"><img src="images/logo.png"></a>
 					</div>
 				</div>
 			</footer>
