--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 				</div>
 				<div class="sponsor">
 					<h2>شكراً للدعم</h2>
-					<a href="#"><img src="logo.png"></a>
+					<a href="#"><img src="images/logo.png"></a>
 				</div>
 			</div>
 			<div class="copyright">
